cmake_minimum_required(VERSION 3.3)
project(w32time)
add_compile_options(/W4 /WX /GS- /Oi)
string(REGEX REPLACE "/RTC(su|[1su])" "" CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG}")
set(CMAKE_EXE_LINKER_FLAGS "/nodefaultlib /entry:Main")
add_definitions(-DUNICODE -D_UNICODE)
add_executable(w32time w32time.c)
target_link_libraries(w32time shlwapi libcmt)
